force-app/main/default/objects/Split_Job__c/Split_Job__c.object-meta.xml
<CustomObject>
    <description>Audit record for one AI Document Splitter run: which bundle was split, into how many docs, and what types were detected.</description>
    <label>Split Job</label>
    <nameField>
        <displayFormat>SJ-{00000000}</displayFormat>
        <label>Split Job Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>