force-app/main/default/objects/Split_Job__c/fields/Chunk_Count__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Count__c</fullName>
    <description>Number of overlapping page chunks the bundle was divided into for AI classification.</description>
    <inlineHelpText>Number of overlapping page chunks the bundle was divided into for AI classification. Equals total page count divided by chunk size, rounded up.</inlineHelpText>
    <label>Chunk Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>