force-app/main/default/objects/Split_Job__c/fields/Chunks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Chunks_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counter of ClassifyQueueable runs that have completed successfully for this job. Incremented under a row lock so concurrent queueables serialize their "am I the last one?" check.</description>
    <inlineHelpText>Auto-managed by ClassifyQueueable. When this reaches Chunk Count, the job moves from Detecting to Merging.</inlineHelpText>
    <label>Chunks Completed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>