force-app/main/default/objects/Split_Job__c/fields/Documents_Created__c.field-meta.xml
<CustomField>
    <fullName>Documents_Created__c</fullName>
    <description>Final count of split typed PDFs saved back to the library.</description>
    <inlineHelpText>Final number of typed PDFs saved back to the library. Populated when Status reaches Complete. May be less than chunk count because the merger collapses adjacent same-type segments.</inlineHelpText>
    <label>Documents Created</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>