force-app/main/default/objects/Split_Job__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>Details of the failure if Status = Error. Captures exception messages and the stage at which the job failed.</description>
    <inlineHelpText>Populated when Status = Error. Captures the stage that failed (Detecting / Merging / Splitting / Saving) and any exception message. Blank on successful runs.</inlineHelpText>
    <label>Error Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>