force-app/main/default/objects/Split_Job__c/fields/Is_Headless__c.field-meta.xml
<CustomField>
    <fullName>Is_Headless__c</fullName>
    <description>True when the job was triggered headlessly (Flow/REST/portal) rather than from the LWC. Tells SplitJobService.runMergeAndPrepareForSplit to enqueue the self-hosted pdf-lib service for the final split step instead of waiting for the LWC.</description>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set automatically by the headless entry point. Don't toggle manually.</inlineHelpText>
    <label>Is Headless</label>
    <type>Checkbox</type>
</CustomField>