force-app/main/default/objects/Split_Job__c/fields/Library_Id__c.field-meta.xml
<CustomField>
    <fullName>Library_Id__c</fullName>
    <description>Id of the ContentWorkspace (Library) where the source bundle lives and where the split files will be saved.</description>
    <inlineHelpText>15- or 18-character Salesforce Id of the target ContentWorkspace (Library). Stored as Text because the platform does not allow custom Lookup relationships to ContentWorkspace.</inlineHelpText>
    <label>Library Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>