force-app/main/default/objects/Split_Job__c/fields/LLM_Response_Audit_JSON__c.field-meta.xml
<CustomField>
    <fullName>LLM_Response_Audit_JSON__c</fullName>
    <description>Diagnostic audit JSON containing the raw LLM prompt response for each classified bundle chunk before parser cleanup or page-offset shifting.</description>
    <inlineHelpText>Auto-managed. Review this JSON when splitter classification output does not parse or does not match the expected document segments.</inlineHelpText>
    <label>LLM Response Audit JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>