force-app/main/default/objects/Split_Job__c/fields/Merged_Segments_JSON__c.field-meta.xml
<CustomField>
    <fullName>Merged_Segments_JSON__c</fullName>
    <description>Final non-overlapping segment list produced by SegmentMerger after all chunks complete. JSON list of {documentType, sourceInstitution, namedParty, startPage, endPage} with full page coverage. Consumed by the documentSplitter LWC to split the source PDF.</description>
    <inlineHelpText>Auto-managed. Final merged segments after all chunks classified. Read by the LWC to split the bundle PDF into typed files.</inlineHelpText>
    <label>Merged Segments JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>