force-app/main/default/objects/Split_Job__c/fields/Raw_Segments_JSON__c.field-meta.xml
<CustomField>
    <fullName>Raw_Segments_JSON__c</fullName>
    <description>JSON array accumulator. Each ClassifyQueueable parses its chunk's prompt response, applies the page-offset shift, and appends its segments to this field under a row lock. Read by SplitJobService.finalizeJob to feed SegmentMerger.</description>
    <inlineHelpText>Auto-managed. JSON list of {document_type, source_institution, named_party, start_page, end_page} across all chunks. Cleared when the job completes.</inlineHelpText>
    <label>Raw Segments JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>