force-app/main/default/objects/Split_Job__c/fields/Source_ContentDocument_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_ContentDocument_Id__c</fullName>
    <description>Id of the ContentDocument that was split.</description>
    <inlineHelpText>15- or 18-character Salesforce Id of the ContentDocument that was split. Stored as Text because the platform does not allow custom Lookup relationships to ContentDocument.</inlineHelpText>
    <label>Source ContentDocument Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>