force-app/main/default/objects/Split_Job__c/fields/Started_By__c.field-meta.xml
<CustomField>
    <fullName>Started_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who clicked Split Documents on the source bundle.</description>
    <inlineHelpText>User who clicked Split Documents. Used for the audit trail and to route any failure notifications back to that user.</inlineHelpText>
    <label>Started By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Split Jobs Started</relationshipLabel>
    <relationshipName>Split_Jobs_Started</relationshipName>
    <type>Lookup</type>
</CustomField>