force-app/main/default/objects/Split_Job__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle state of this split job. Drives the LWC progress UI.</description>
    <inlineHelpText>Current lifecycle stage of this split job. Updated automatically by the splitter Apex Queueables — not intended for manual editing.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Detecting</fullName>
            </value>
            <value>
                <fullName>Merging</fullName>
            </value>
            <value>
                <fullName>Splitting</fullName>
            </value>
            <value>
                <fullName>Saving</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>