force-app/main/default/objects/Split_Job__c/fields/Target_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Folder_Id__c</fullName>
    <description>Optional ContentFolder Id where split outputs should be saved. Set when the source bundle lives in a folder; blank means save to the library root.</description>
    <inlineHelpText>Auto-detected from the source file's folder membership. Splits land in the same folder as the bundle.</inlineHelpText>
    <label>Target Folder Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>