force-app/main/default/objects/Split_Job__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>Optional record (typically a Loan_Application__c) the split outputs should be attached to via ContentDocumentLink. Used by the headless flow when the portal creates a loan record and uploads a bundle in one shot.</description>
    <inlineHelpText>Loan Application Id (or any record) the splits should appear on. Service creates a ContentDocumentLink per output.</inlineHelpText>
    <label>Target Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>