force-app/main/default/objects/Split_Job__c/fields/Total_Pages__c.field-meta.xml
<CustomField>
    <fullName>Total_Pages__c</fullName>
    <description>Total page count of the source PDF bundle.</description>
    <inlineHelpText>Total page count of the source PDF bundle. Read by the documentSplitter LWC before classification begins.</inlineHelpText>
    <label>Total Pages</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>