force-app/main/default/objects/Split_Job__c/fields/Type_Breakdown_JSON__c.field-meta.xml
<CustomField>
    <fullName>Type_Breakdown_JSON__c</fullName>
    <description>JSON array summarizing the documents created, e.g. [{"type":"BANK_STATEMENT","count":2}].</description>
    <inlineHelpText>Read-only audit field. JSON summary of saved files, e.g. [{"type":"BANK_STATEMENT","count":2,"sources":["Chase","Wells Fargo"]}]. Read by reports, not edited by users.</inlineHelpText>
    <label>Type Breakdown JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>